[package]
name = "tcpinterface"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = "3"
rand = "0.8"
rust_db_xthreadstore = { git = "https://github.com/Skeletrox/rust_db_xthreadstore", branch = "main" }
rust_db_proto = { git = "https://github.com/Skeletrox/rust_db_proto", branch = "main" }